# ckanext-cmar-theme

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/cmar_theme/: plugin.py
ckanext/cmar_theme/assets/: script.js  webassets.yml
ckanext/cmar_theme/i18n/: ckanext-cmar_theme.pot
ckanext/cmar_theme/i18n/es/LC_MESSAGES/: ckanext-cmar_theme.mo  ckanext-cmar_theme.po
ckanext/cmar_theme/public/: cmar_theme.css
ckanext/cmar_theme/templates/: base.html  footer.html  header.html
ckanext/cmar_theme/templates/group/snippets/: group_item.html  group_list.html
ckanext/cmar_theme/templates/home/: about.html  index.html
ckanext/cmar_theme/templates/home/snippets/: about_text.html  promoted.html  search.html
ckanext/cmar_theme/templates/organization/: read.html
ckanext/cmar_theme/templates/organization/snippets/: organization_item.html  organization_list.html
ckanext/cmar_theme/templates/package/: read.html  read_base.html  resource_edit.html  resource_read.html  search.html
ckanext/cmar_theme/templates/package/snippets/: additional_info.html
ckanext/cmar_theme/templates/snippets/: cmar_theme_display_package_card.html  facet_list.html  home_breadcrumb_item.html  license.html  social.html
ckanext/cmar_theme/tests/: test_plugin.py
