[metadata]
name = ckanext-cmar-theme
version = 0.0.1
description = Theme for the CMAR instance of CKAN.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CharlesDarwinFoundation/ckanext-cmar-theme
author = Anna Dolma Alonso
author_email = dolma.alonso@fcdarwin.org.ec
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN theme template

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             cmar_theme = ckanext.cmar_theme.plugin:CmarThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/cmar_theme/i18n/ckanext-cmar_theme.pot
width = 80

[init_catalog]
domain = ckanext-cmar_theme
input_file = ckanext/cmar_theme/i18n/ckanext-cmar_theme.pot
output_dir = ckanext/cmar_theme/i18n

[update_catalog]
domain = ckanext-cmar_theme
input_file = ckanext/cmar_theme/i18n/ckanext-cmar_theme.pot
output_dir = ckanext/cmar_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-cmar_theme
directory = ckanext/cmar_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
